[#65] HACK ALERT AGAIN -- more hackish stuff to get MBLD to render nicely on mobile quickly. This needs to be fixed.

--- a/app/static/less/timer/mobile.less
+++ b/app/static/less/timer/mobile.less
@@ -100,7 +100,7 @@
 
 #the_mbld_entry {
     &.extended {
-        height: 85%;
+        height: 80%;
 
         #mbldEntryForm, #mbldEntryForm2, #mbldEntryForm3 {
             .form-group {
@@ -113,7 +113,7 @@
 
 .mods_area {
     &.reduced {
-        height: 15%;
+        height: 20%;
         width: 100%;
     }
 }
